testsuite/tests/typecheck/should_compile/T13381.stderr

T13381.hs:21:23: error:
    • Couldn't match type ‘Exp Int’ with ‘Int’
      Expected: Int -> Iter Int (Exp Char)
        Actual: Int -> Iter (Exp Int) (Exp Char)
    • In the first argument of ‘iterLoop’, namely ‘f’
      In the first argument of ‘fromExp’, namely ‘(iterLoop f init)’
      In the expression: fromExp (iterLoop f init)
